--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
   :root {
     --background: 27 27 27;
     --foreground: 225 225 225;
     --muted: 115 115 115;
     --accent: 254 254 91;
-     /* #FEFE5B */
+    /* #FEFE5B */
   }
 }
 
 @layer utilities {
- 
+  .pause {
+    animation-play-state: paused;
+  }
+}
+
+
+@keyframes move{
+  0%{
+    transform: translate(0,0);
+  }
+  100%{
+    transform: translate(100px,100px);
+  }
 }
